[package]
name = "pijul"
version = "0.1.0"
authors = ["Pierre-Étienne Meunier","Florent Becker"]
build="build.rs"

[dependencies]
libc = "*"
clap = "*"
rand="*"
serde = "*"
serde_macros = "*"
serde_cbor = "*"
rust-crypto = "*"
rustc-serialize = "*"
tempdir="*"

rsync="0.1.2"
ssh2="*"
regex="0.1.41"

[build-dependencies]
gcc="*"

[[bin]]
name="main"
doc=false
