[package]
name = "libpijul"
version = "0.1.0"
authors = ["Pierre-Étienne Meunier","Florent Becker"]
license = "AGPL-3.0"
build = "build.rs"

[dependencies]
libc = "*"
rustc-serialize="0.3"
rand = "*"
rust-crypto="*"
bincode="*"

time="*"
log="0.3"
serde="*"

[build-dependencies]
gcc="*"
syntex="*"
serde_codegen="*"