[package]
name = "libpijul"
version = "0.1.0"
authors = ["Pierre-Étienne Meunier","Florent Becker"]
license = "AGPL-3.0"
build = "build.rs"

[dependencies]
libc = "0.2"
rustc-serialize="0.3"
rand = "0.3"
rust-crypto="0.2"
bincode="0.4"

time="0.1"
log="0.3"
serde="0.6"

[build-dependencies]
gcc="0.3"
syntex="0.22.0"
serde_codegen="0.6"
