[package]
name = "libpijul"
description = "A patch-based distributed version control system, easy to use and fast."
version = "0.2.0"
authors = ["Pierre-Étienne Meunier","Florent Becker"]
license = "AGPL-3.0"
build = "build.rs"
homepage = "https://pijul.org/"
documentation = "https://pijul.org/documentation"

[dependencies]
libc = "0.2"
rustc-serialize="0.3"
rand = "0.3"
rust-crypto="0.2"
time="0.1"
log="0.3"
cbor="0.3"

[build-dependencies]
gcc="0.3"
