[package]
name = "pijul"
version = "0.1.0"
authors = ["Pierre-Étienne Meunier","Florent Becker"]
license = "AGPL-3.0"

[dependencies]
clap = "*"
rust-crypto = "*"
regex=">=0.1.41"
rand= "*"
log="*"
time="*"
env_logger="*"
libpijul = {path="../libpijul"}

ssh = "0.1"

rustc-serialize="*"

[dev-dependencies]
tempdir="*"
