[package]
name = "pijul"
version = "0.1.0"
authors = ["Pierre-Étienne Meunier","Florent Becker"]
license = "AGPL-3.0"

[dependencies]
clap = "1.5"
rust-crypto = "0.2"
regex="0.1"
rand= "0.3"
log="0.3"
time="0.1"
env_logger="0.3"

ssh = "0.1"
toml = "0.1"
rustc-serialize="0.3"
hyper="0.7"
term="0.2"

termios="0.2"

[dependencies.libpijul]
path="../libpijul"

[dev-dependencies]
tempdir="0.3"
